recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:6: error: type mismatch;
 found   : Unit
 required: java.awt.Color
    setCouleur(current(steps))
                      ^